# programming-workout

./: .gitignore  README.md
clojure/seven-languages/: README.md  project.clj
coffee-script/: exercises1.coffee  exercises2.coffee  exercises3.coffee
coffee-script/5x5/: Dictionary.coffee  Grid.coffee  OWL2.js  Player.coffee  console.coffee  game.coffee  prompt.coffee
elixir/programming-elixir/: Functions.exs  Lists.exs  ModulesAndFunctions.exs
elixir/rosalind/: calculating-protein-mass.exs  enumerating-gene-orders.exs  enumerating-kmers-lexicographically.exs  inferring-mrna-from-protein.exs  mendels-first-law.exs  organizing-strings-of-different-length.exs  translating-rna-into-protein.exs
elm/seven-more-languages/: day1.elm  day2.elm
factor/seven-more-languages/: day-1.factor
haskell/FP101x/: week-1.hs  week-4.hs
haskell/advent-of-code/: day1.hs  day2.hs  day3.hs
haskell/cis194-course/: cis194-course.cabal  stack.yaml
haskell/cis194-course/src/: Lib.hs
haskell/cis194-course/src/week-1/: CardValidation.hs
haskell/cis194-course/src/week-3/: Golf.hs
haskell/cis194-course/src/week-4/: Single.hs
haskell/cis194-course/src/week-5/: Test.hs
haskell/project-euler/: problem-1.hs  problem-2.hs
reason-ml/advent-of-code/: README.md  bsconfig.json  package.json
ruby/rosalind/: complementing-dna-strand.rb  computing-gc-content.rb  counting-dna-nucleotides.rb  finding-dna-motif.rb  transcribing-dna-into-rna.rb
rust/cryptopals/: Cargo.toml
rust/rust-for-rubyists/: dwemthy.rs  fizzbuzz.rs  guessing-game.rs  hello.rs  testing.rs
swift/CustomViews.playground/: Contents.swift  (+1 more)
(+119 files in other folders)
